@@ -1,3 +1,9 @@
+2002-01-09  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* common.h: Update copyright years.
+	(NT_NETBSDCORE_PROCINFO): Define.
+	(NT_NETBSDCORE_FIRSTMACH): Define. 
+
 2002-01-06  Steve Ellcey  <sje@cup.hp.com>
 
 	* ia64.h (ELF_STRING_ia64_unwind_hdr): New Macro for HP-UX.
