@@ -1,3 +1,9 @@
+2002-01-09  Jason Thorpe  <thorpej@wasabisystems.com> 
+
+	* elf.c: Update copyright years.
+	(elfcore_grok_netbsd_note): Use NT_NETBSDCORE_PROCINFO
+	and NT_NETBSDCORE_FIRSTMACH.  Improve a comment.
+
 2002-01-08  Michael Snyder  <msnyder@redhat.com>
 
 	Add capability to write corefile note sections, for gdb.
